--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
 
-	<title>Monaco Editor</title>
+	<title>PCM Editor</title>
 
 	<link data-inline="yes-please" href="./lib/bootstrap-cosmo.css" rel="stylesheet">
 	<link data-inline="yes-please" href="./lib/bootstrap-responsive.min.css" rel="stylesheet">
@@ -20,8 +20,6 @@
 	<pre data-preload="index/samples/sample.typescript.txt"></pre>
 	<pre data-preload="index/samples/diff.lhs.txt"></pre>
 	<pre data-preload="index/samples/diff.rhs.txt"></pre>
-	<a id="gh-link" href="https://github.com/Microsoft/monaco-editor"><img
-		width="149" height="149" alt="Fork me on GitHub" src="./fork.png"/></a>
 	<nav class="navbar navbar-inverse navbar-fixed-top">
 		<div class="navbar-inner">
 			<div class="container">
@@ -41,7 +39,7 @@
 						<li><a class="nav-item" href="index.html">Home</a></li>
 						<li><a class="nav-item" href="api/index.html">API Doc</a></li>
 						<li><a class="nav-item" href="playground.html">Playground</a></li>
-						<li><a class="nav-item" href="monarch.html">Monarch</a></li>
+						<li><a class="nav-item" href="monarch.html">PCM</a></li>
 						<li><a class="nav-item" target="_blank" href="https://registry.npmjs.org/monaco-editor/-/monaco-editor-{{version}}.tgz">Download {{version}}</a></li>
 					</ul>
 				</div>
