--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
 
-	<title>Monaco Editor</title>
+	<title>PCM Editor</title>
 
 	<style>/*!
  * Bootstrap v2.3.0
