--- a/monarch.html
+++ b/monarch.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
 
-	<title>Monaco Editor Monarch</title>
+	<title>PCM Editor</title>
 
 	<style>/*!
  * Bootstrap v2.3.0
@@ -67,11 +67,11 @@
 **********************************************-->
 
   <div id="main">
-    <div id="header"><img src="monarch/monarch-34px.png" id="logo" alt="Monarch-Logo">Monarch Documentation
+    <div id="header"><img src="monarch/monarch-34px.png" id="logo" alt="Monarch-Logo"> Documentação do PCM
     </div>
 
     <div id="leftPane">
-      <div class="paneheader">Language syntax definition
+      <div class="paneheader">Definição da síntaxe da linguagem
         <span class="selectbox">
           Sample: <select id="sampleselect">
             <option>mylang</option>
