--- a/monarch.html
+++ b/monarch.html
@@ -37,7 +37,7 @@
 		<div class="navbar-inner">
 			<div class="container">
 				<div class="logo">
-					<a href="index.html">Monaco Editor</a>
+					<a href="index.html">PCM Editor</a>
 				</div>
 				<!-- collapse button for smaller screens -->
 				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
