--- a/index.html
+++ b/index.html
@@ -593,7 +593,7 @@ var game = new Conway.GameOfLife();
 		<div class="navbar-inner">
 			<div class="container">
 				<div class="logo">
-					<a href="index.html">Monaco Editor</a>
+					<a href="index.html">PCM Editor</a>
 				</div>
 				<!-- collapse button for smaller screens -->
 				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
