--- a/website/index.html
+++ b/website/index.html
@@ -36,10 +36,10 @@
 				<!-- navbar title -->
 				<div class="nav-collapse collapse">
 					<ul class="nav">
-						<li><a class="nav-item" href="index.html">Home</a></li>
-						<li><a class="nav-item" href="api/index.html">API Doc</a></li>
-						<li><a class="nav-item" href="playground.html">Playground</a></li>
-						<li><a class="nav-item" href="monarch.html">PCM</a></li>
+						<li><a class="nav-item" href="index.html">Início</a></li>
+						<li><a class="nav-item" href="api/index.html">Doc. API</a></li>
+						<li><a class="nav-item" href="playground.html">Teste</a></li>
+						<li><a class="nav-item" href="monarch.html">PCM Editor</a></li>
 						<li><a class="nav-item" target="_blank" href="https://registry.npmjs.org/monaco-editor/-/monaco-editor-{{version}}.tgz">Download {{version}}</a></li>
 					</ul>
 				</div>
