--- a/website/monarch.html
+++ b/website/monarch.html
@@ -6,7 +6,7 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width">
 
-	<title>Monaco Editor Monarch</title>
+	<title>PCM Editor</title>
 
 	<link data-inline="yes-please" href="./lib/bootstrap-cosmo.css" rel="stylesheet">
 	<link data-inline="yes-please" href="./lib/bootstrap-responsive.min.css" rel="stylesheet">
@@ -21,7 +21,7 @@
 		<div class="navbar-inner">
 			<div class="container">
 				<div class="logo">
-					<a href="index.html">Monaco Editor</a>
+					<a href="index.html">PCM Editor</a>
 				</div>
 				<!-- collapse button for smaller screens -->
 				<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
