--- a/website/monarch.html
+++ b/website/monarch.html
@@ -57,26 +57,8 @@
     <div id="leftPane">
       <div class="paneheader">Language syntax definition
         <span class="selectbox">
-          Sample: <select id="sampleselect">
-            <option>mylang</option>
-            <option>java</option>
-            <option>javascript</option>
-            <option>python</option>
-            <option>csharp</option>
-            <option>xdot</option>
-            <option>koka</option>
-            <option disabled label=" "></option>
-            <option>boogie</option>
-            <option>chalice</option>
-            <option>dafny</option>
-            <option>formula</option>
-            <option>smt2</option>
-            <option>specsharp</option>
-            <option>z3python</option>
-            <option disabled label=" "></option>
-            <option>html</option>
-            <option>markdown</option>
-            <option>ruby</option>
+          Linguagem: <select id="sampleselect">
+            <option>PCM</option>
           </select>
         </span>
       </div>
@@ -86,12 +68,12 @@
     </div>
 
     <div id="rightPane">
-      <div class="paneheader">Language editor
+      <div class="paneheader">Editor da Linguagem
         <span class="arrowdown" style="display:none">&#x25BC;</span>
         <span class="selectbox">
-          Theme: <select id="themeselect">
-            <option>vs</option>
-            <option>vs-dark</option>
+          Tema: <select id="themeselect">
+            <option>Claro</option>
+            <option>Escuro</option>
           </select>
         </span>
       </div>
